# EDAI

./: .cripperignore  .eda_history  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  cmds.txt  pyproject.toml  test.py
.github/workflows/: ci.yml
docs/: Makefile  feaeture.md  make.bat
docs/source/: architecture.rst  conf.py  index.rst  index_zh.rst  overview.rst  overview_zh.rst  usage.rst  usage_zh.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/en/: architecture.rst  index.rst  overview.rst  usage.rst
docs/source/zh/: architecture.rst  index.rst  overview.rst  usage.rst
src/edai/: __init__.py  __main__.py  agent.py  cli.py  completer.py  repl.py  tcl_engine.py
src/edai/agent/: BaseAgent.py  DesignAgent.py  EdaAgent.py  EdaiAgent.py  __init__.py  agent.py  config.py  graph.py
src/edai/core/: Message.py  __init__.py  backend_config.py  baseagent.py  cmd_registry.py  debug.py  eda_interactive.py  mock_cmds.py  mock_engine.py  mock_repl.py  python_interactive.py  special_cmds.py
src/edai/roles/: Designer.md  EDAI.md  __init__.py
src/edai/roles/agents/: Designer.md  EDAI.md
src/edai/roles/backends/: RainaSynth.md  dc_shell.md  mock.md  python.md  tclsh.md
src/edai/tool/: __init__.py  eda_interpreter.py  python_interpreter.py
src/edai/tool/tcl/: __init__.py  cmd_defs.py  completer.py  engine.py  repl.py
src/edai/ui/: __init__.py  agent_info_screen.py  app.py
src/edai/ui/screens/: __init__.py  main.py
src/edai/ui/widgets/: __init__.py  completion_dropdown.py  edai_textarea.py  suggester.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_mock_repl.py  test_repl.py  test_special_cmds.py  test_tcl_engine.py
